added tests and cleaned tech debt

--- a/alembic.ini
+++ b/alembic.ini
@@ -55,7 +55,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql+aiomysql://root:root@35.209.152.226/roomr
+sqlalchemy.url = mysql+aiomysql://myuser:mypass@35.209.247.147/roomr
 
 
 [post_write_hooks]
