--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ pydantic==1.9.1
 PyMySQL==1.0.2
 pyparsing==3.0.9
 pytest==7.1.2
+pytest-asyncio==0.19.0
 python-multipart==0.0.5
 redis==4.1.0
 requests==2.28.1
