--- a/.github/workflows/repository_test.yaml
+++ b/.github/workflows/repository_test.yaml
@@ -22,6 +22,9 @@ jobs:
         with:
           workload_identity_provider: 'projects/959426188245/locations/global/workloadIdentityPools/github-action-pool-1/providers/github-action-provider-1'
           service_account: 'artifact-repository-access@roomr-222721.iam.gserviceaccount.com'
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v0'
+      
       - name: Pull MySQL
         run: |
           docker pull us-central1-docker.pkg.dev/roomr-222721/roomr-docker-repo/mysql
