--- a/.github/workflows/repository_test.yaml
+++ b/.github/workflows/repository_test.yaml
@@ -33,7 +33,7 @@ jobs:
           path: mysql-docker-kubernetes
       - name: Build MySQL
         run: |
-          docker build -t sneyd321/mysql .
+          docker build -t sneyd321/mysql ./mysql-docker-kubernetes
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
