remove volume from docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
         image: sneyd321/mysql
         ports: 
             - 3306:3306
+        environment: 
+            - MYSQL_ROOT_PASSWORD:Homeowner
         cap_add:
             - SYS_NICE
 
