--- a/.github/workflows/repository_test.yaml
+++ b/.github/workflows/repository_test.yaml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Boot Docker Compose
         run: |
-          docker compose up
+          docker compose up -d
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
