--- a/.github/workflows/repository_test.yaml
+++ b/.github/workflows/repository_test.yaml
@@ -15,7 +15,8 @@ jobs:
 
 
     steps:
-      
+      - name: Checkout
+        uses: actions/checkout@v3
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v0'
@@ -34,8 +35,7 @@ jobs:
       - name: Build MySQL
         run: |
           docker build -t sneyd321/mysql ./mysql-docker-kubernetes
-      - name: Checkout
-        uses: actions/checkout@v3
+      
       - name: Boot Docker Compose
         run: |
           docker compose up -d
@@ -54,6 +54,10 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - name: Run Alembic
+        run: |
+          alembic revision --autogenerate
+          alembic upgrade head
       - name: Test with pytest
         run: |
           pytest tests --asyncio-mode=strict
