--- a/.github/workflows/outage_test.yaml
+++ b/.github/workflows/outage_test.yaml
@@ -34,4 +34,4 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pytest tests/test_outage.py --asyncio-mode=strict
+          pytest tests/test_outages.py --asyncio-mode=strict
