--- a/.github/workflows/deploy_to_cloud_run.yaml
+++ b/.github/workflows/deploy_to_cloud_run.yaml
@@ -20,11 +20,11 @@ jobs:
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v0'
       - name: Configure Docker
-        run: gcloud auth configure-docker --quiet
-      - name: Build Image
         run: |
+          gcloud auth configure-docker --quiet
           docker build -t sneyd321/us-central1-docker.pkg.dev/roomr-222721/roomr-docker-repo/tenant-service .
-      - name: Push image to artifact registry
-        run: |
           docker push us-central1-docker.pkg.dev/roomr-222721/roomr-docker-repo/tenant-service
+          
+    
+          
       
