--- a/.github/workflows/deploy_to_cloud_run.yaml
+++ b/.github/workflows/deploy_to_cloud_run.yaml
@@ -21,7 +21,10 @@ jobs:
         uses: 'google-github-actions/setup-gcloud@v0'
       - name: Configure Docker
         run: |
-          gcloud auth configure-docker --quiet
+          curl -fsSL "https://github.com/GoogleCloudPlatform/docker-credential-gcr/releases/download/v${VERSION}/docker-credential-gcr_linux_amd64-2.1.6.tar.gz" \
+          | tar xz docker-credential-gcr \
+          && chmod +x docker-credential-gcr && sudo mv docker-credential-gcr /usr/bin/
+          docker-credential-gcr configure-docker --registries=us-central1-docker.pkg.dev
           docker build -t sneyd321/us-central1-docker.pkg.dev/roomr-222721/roomr-docker-repo/tenant-service .
           docker push us-central1-docker.pkg.dev/roomr-222721/roomr-docker-repo/tenant-service
           
