--- a/.github/workflows/outage_test.yaml
+++ b/.github/workflows/outage_test.yaml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.8
         uses: actions/setup-python@v4
         with:
           python-version: 3.8
@@ -21,7 +21,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
       - name: Test with pytest
         run: |
-          pytest tests/test_outages.py --asyncio-mode=strict
+          pytest tests/test_outages.py
