--- a/.github/workflows/run_failure_test.yaml
+++ b/.github/workflows/run_failure_test.yaml
@@ -1,63 +1,74 @@
-name: Run Repository Tests
+name: Run Failure Scenarios
 on: [workflow_dispatch]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
-        
+    
     permissions:
       contents: 'read'
       id-token: 'write'
 
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v0'
         with:
           workload_identity_provider: 'projects/959426188245/locations/global/workloadIdentityPools/github-action-pool-1/providers/github-action-provider-1'
           service_account: 'artifact-repository-access@roomr-222721.iam.gserviceaccount.com'
+
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v0'
+
       - name: Configure Docker
         run: gcloud auth configure-docker --quiet
-      - name: Checkout MySQL Repo
-        uses: actions/checkout@v3
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
         with:
-          repository: sneyd321/mysql-docker-kubernetes
-          path: mysql-docker-kubernetes
-      - name: Build MySQL
-        run: |
-          docker build -t sneyd321/mysql ./mysql-docker-kubernetes
+          terraform_version: 0.13.0
       
-      - name: Boot Docker Compose
-        run: |
-          docker compose up -d
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Terraform Init
+        id: init
+        run: terraform init    
+      
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
+      
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan -no-color -var="project_id"=roomr-222721 -var="db_pass"=root
+        continue-on-error: true
+      
+      - name: Terraform Plan Status
+        if: steps.plan.outcome == 'failure'
+        run: exit 1
+      
+      - name: Terraform Apply
+        run: terraform apply -auto-approve -var="project_id"=roomr-222721 -var="db_pass"=root
+      
+      - name: Sleep for 30 seconds to allow VM to boot container
+        run: sleep 30s
+        shell: bash
+
+      - name: Set up Python 3.8
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.8
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
       - name: Run Alembic
         run: |
           alembic revision --autogenerate
           alembic upgrade head
+
       - name: Test with pytest
         run: |
-          pytest tests/test_repository.py --asyncio-mode=strict
+          pytest tests/test_repository.py
