add terraform destroy

--- a/.github/workflows/run_failure_test.yaml
+++ b/.github/workflows/run_failure_test.yaml
@@ -66,6 +66,7 @@ jobs:
           pip install alembic
           pip install aiomysql
           pip install cryptography
+          pip install passlib
 
       - name: Run Alembic
         run: |
