--- a/.github/workflows/run_success_test.yaml
+++ b/.github/workflows/run_success_test.yaml
@@ -1,4 +1,4 @@
-name: Run Success Scenarios
+name: Run Failure Scenarios
 on: [workflow_dispatch]
 
 jobs:
@@ -59,22 +59,28 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.8
-      - name: Install dependencies
+
+      - name: Install alembic dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install alembic
+          pip install aiomysql
+          pip install cryptography
+          pip install passlib
 
-      - name: Run Alembic
+      - name: Run Test
         run: |
+          PUBLIC_IP=$(gcloud compute instances describe mysql-test-instance-1 --zone=us-east5-a --format='get(networkInterfaces[0].accessConfigs[0].natIP)')
+          echo $PUBLIC_IP
+
+          docker build -t sneyd321/tenant-service .  
+
+          python alembic_setup.py --user=root --password=root --database=roomr --host=$PUBLIC_IP
           alembic revision --autogenerate
           alembic upgrade head
 
-      - name: Configure Docker
-        run: |
-          gcloud auth configure-docker us-central1-docker.pkg.dev
-          docker build -t sneyd321/tenant-service .
-          docker compose up
-          
-      - name: Test with pytest
-        run: |
-          pytest tests/test_repository.py
+          pytest tests/test_fastapi.py
+      
+      - name: Terraform Destroy
+        if: always()
+        run: terraform destroy -auto-approve -var="project_id"=roomr-222721 -var="db_pass"=root
