fix failure test automation

--- a/.github/workflows/run_failure_test.yaml
+++ b/.github/workflows/run_failure_test.yaml
@@ -70,7 +70,9 @@ jobs:
 
       - name: Run Test
         run: |
-          PUBLIC_IP=$(gcloud compute instances describe mysql-test-instance-1 --zone=us-east5-a --format='get(networkInterfaces[0].accessConfigs[0].natIP)')
+          RANDOM_ID=$(terraform output random_id) | tr -d '"'
+          echo $RANDOM_ID
+          PUBLIC_IP=$(gcloud compute instances describe mysql-test-instance-$RANDOM_ID --zone=us-east5-a --format='get(networkInterfaces[0].accessConfigs[0].natIP)')
           echo $PUBLIC_IP
 
           docker build -t sneyd321/tenant-service .  
